# MarketLabsDemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  sample_contract.txt
.github/workflows/: ci-cd.yml
src/: config.py
src/api/: __init__.py
src/models/: __init__.py  analysis.py  base.py  clause.py  document.py  enums.py  template.py  tenant.py
src/prompts/: clause_extraction.py  schemas.py
src/services/: ai_client.py  analysis_service.py  exceptions.py  retry.py
src/workers/: worker.py
tests/: conftest.py  test_analysis_service.py  test_prompt_validation.py
