[project]
name = "documind"
version = "0.1.0"
description = "AI-powered contract and legal document analysis tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic>=2.0",
    "httpx",
    "redis",
    "python-multipart",
    "pydantic-settings",
]

[project.optional-dependencies]
pdf = ["PyPDF2"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
